Revision history for Plack-Middleware-Statsd

{{$NEXT}}
  [Tests]
  - Added tests for how errors are trapped and logged.

  - Add Test::Pod::LinkCheck author test.

  [Other]
  - Explicitly declare List::Util and Time::HiRes as prereqs.

v0.4.1    2020-03-21 17:15:30+00:00 Europe/London (TRIAL RELEASE)
  [Bug Fixes]
  - Apply sample_rate to psgi.response.x-sendfile.

v0.4.0    2020-03-21 00:24:40+00:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Some initialisation is done beforehand, which should result in a
    slight performance improvement.

  - Added histogram, increment and set_count attributes which are
    code references for methods that do the actual logging.

  [Incompatabilities]
  - The client is required, and not initialised from the
    psgix.monitor.statsd key in the environment.

  [Documentation]
  - Made better use of Pod::Weaver commands.

  - Bumped copyright year

  [Other]
  - Renamed internal variables for consistency.

  - Show more module versions in test diagnostics.

v0.3.10   2019-12-18 23:45:32+00:00 Europe/London
  [Enhancements]
  - Added psgi.worker.pid metric for tracking the number of active workers, #4.

  [Documentation]
  - Bumped copyright year.

v0.3.9    2018-11-30 15:59:17+00:00 Europe/London
  [Documentation]
  - Removed the section about support for older Perl versions.

  - Fixed typo in Changes for v0.3.5.

  - Added note about Catalyst::Plugin::Statsd.

v0.3.8    2018-11-30 01:30:27+00:00 Europe/London
  [Documentation]
  - Added INSTALL file to the distribution.

  - Fixed typo in POD.

  [Toolchain]
  - Tweaks to dist.ini for simplifying build.

  - Updated MANIFEST.SKIP.

v0.3.7    2018-10-19 16:06:50+01:00 Europe/London
  [Toolchain]
  - Added MANIFEST.SKIP to distribution.

v0.3.6    2018-10-16 22:38:04+01:00 Europe/London
  [Documentation]
  - Corrected minor typo.

v0.3.5    2018-05-31 21:19:21+01:00 Europe/London
  [Documentation]
  - Documented a known issue about non-standard status codes, #2.
